Add wdio config file to run test on Safari

--- a/env.example
+++ b/env.example
@@ -1,2 +1,3 @@
-BROWSER=chrome
-HEADLESS=false
+# create a file named '.env' and put the following lines to the file.
+BROWSER=chrome  # option: chrome | firefox | edge | safari
+HEADLESS=false  # option: false | true
