--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "allure-commandline": "^2.22.2",
     "chromedriver": "^114.0.2",
     "edgedriver": "^5.2.1",
-    "geckodriver": "^4.0.4"
+    "geckodriver": "^4.0.4",
+    "wdio-safaridriver-service": "^2.1.0"
   }
 }
