--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,47 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  Testing:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: ubuntu:22.04
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "Install Curl & Wget"
+          command: |
+            apt-get update
+            apt-get -y install curl wget
+      - run:
+          name: "Install Node & Java"
+          command: |
+            curl -sL https://deb.nodesource.com/setup_18.x | bash -
+            apt-get update
+            apt-get -y install nodejs default-jre-headless
+      - run:
+          name: "Install Node Package"
+          command: npm install
+      - run:
+          name: "Install Browser - Firefox"
+          command: |
+            apt-get -y install firefox
+      - run:
+          name: "Install Browser - Chrome"
+          command: |
+            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+            dpkg -i google-chrome-stable_current_amd64.deb
+      - run:
+          name: "Install Browser - Ms Edge"
+          command: |
+            wget -q https://packages.microsoft.com/keys/microsoft.asc -O- | sudo apt-key add -
+            sudo add-apt-repository "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main"
+            apt-get update  && apt-get -y install microsoft-edge-dev
+      - run:
+          name: "Run test - Firefox"
+          command: |
+            echo "BROWSER=firefox" > .env
+            echo "HEADLESS=true" >> .env
+            npm run test -- --suite "sanityTest"
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  Test-Workflow:
     jobs:
-      - say-hello
+      - Testing
