--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,23 +23,28 @@ jobs:
           name: "Install Browser - Firefox"
           command: |
             apt-get -y install firefox
+          when: always
       - run:
           name: "Install Browser - Chrome"
           command: |
             wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
             dpkg -i google-chrome-stable_current_amd64.deb
+            apt-get install -f
+          when: always
       - run:
           name: "Install Browser - Ms Edge"
           command: |
             wget -q https://packages.microsoft.com/keys/microsoft.asc -O- | sudo apt-key add -
             sudo add-apt-repository "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main"
             apt-get update  && apt-get -y install microsoft-edge-dev
+          when: always
       - run:
           name: "Run test - Firefox"
           command: |
             echo "BROWSER=firefox" > .env
             echo "HEADLESS=true" >> .env
             npm run test -- --suite "sanityTest"
+          when: always
 
 workflows:
   Test-Workflow:
