--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run:
           name: "Copy file to work directory"
-          command: mv . /app/
+          command: cp -r . /app/
       - run:
           name: "Run test - Firefox"
           command: |
