--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           name: "Install Dependencies"
           command: |
-            curl -sL https://deb.nodesource.com/setup_18.x | bash -
+            curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
             sudo apt-get update
             sudo apt-get -y install nodejs
             npm install
