--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ jobs:
       - run:
           name: "Install Dependencies"
           command: |
-            curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
+            curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
             sudo apt-get update
-            sudo apt-get -y install nodejs
+            sudo apt-get install -y nodejs
             npm install
       - run:
           name: "Run Test - Chrome"
@@ -42,9 +42,9 @@ jobs:
       - run:
           name: "Install Dependencies"
           command: |
-            curl -sL https://deb.nodesource.com/setup_18.x | bash -
+            curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
             sudo apt-get update
-            sudo apt-get -y install nodejs
+            sudo apt-get install -y nodejs
             npm install
       - run:
           name: "Run test - Firefox"
@@ -72,9 +72,9 @@ jobs:
       - run:
           name: "Install Dependencies"
           command: |
-            curl -sL https://deb.nodesource.com/setup_18.x | bash -
+            curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
             sudo apt-get update
-            sudo apt-get -y install nodejs
+            sudo apt-get install -y nodejs
             npm install
       - run:
           name: "Run test - Edge"
