--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@ jobs:
       image: ubuntu-2204:current
     steps:
       - checkout
-      - run:
-          name: "Running Selenium Standalone - Chrome"
-          command: docker run --name "chrome" -d -p 4444:4444 selenium/standalone-chrome:latest
-          when: always
+      # - run:
+      #     name: "Running Selenium Standalone - Chrome"
+      #     command: docker run --name "chrome" -d -p 4444:4444 selenium/standalone-chrome:latest
+      #     when: always
       - run:
           name: "Install Dependencies"
           command: |
@@ -21,7 +21,7 @@ jobs:
           command: |
             echo "BROWSER=chrome" > .env
             echo "HEADLESS=true" >> .env
-            npm run test -- --suite "sanityTest"
+            npm run test-ci -- --suite "sanityTest"
             docker stop "chrome"
       - run:
           name: "Wrapping Test Result"
@@ -35,10 +35,10 @@ jobs:
       image: ubuntu-2204:current
     steps:
       - checkout    
-      - run:
-          name: "Running Selenium Standalone - Firefox"
-          command: docker run --name "firefox" -d -p 4444:4444 selenium/standalone-firefox:latest
-          when: always
+      # - run:
+      #     name: "Running Selenium Standalone - Firefox"
+      #     command: docker run --name "firefox" -d -p 4444:4444 selenium/standalone-firefox:latest
+      #     when: always
       - run:
           name: "Install Dependencies"
           command: |
@@ -51,7 +51,7 @@ jobs:
           command: |
             echo "BROWSER=firefox" > .env
             echo "HEADLESS=true" >> .env
-            npm run test -- --suite "sanityTest"
+            npm run test-ci -- --suite "sanityTest"
             docker stop "firefox"
       - run:
           name: "Wrapping Test Result"
@@ -65,10 +65,10 @@ jobs:
       image: ubuntu-2204:current
     steps:
       - checkout    
-      - run:
-          name: "Running Selenium Standalone - Edge"
-          command: docker run --name "edge" -d -p 4444:4444 selenium/standalone-edge:latest
-          when: always
+      # - run:
+      #     name: "Running Selenium Standalone - Edge"
+      #     command: docker run --name "edge" -d -p 4444:4444 selenium/standalone-edge:latest
+      #     when: always
       - run:
           name: "Install Dependencies"
           command: |
@@ -81,14 +81,17 @@ jobs:
           command: |
             echo "BROWSER=edge" > .env
             echo "HEADLESS=true" >> .env
-            npm run test -- --suite "sanityTest"
+            npm run test-ci -- --suite "sanityTest"
             docker stop "edge"
       - run:
           name: "Wrapping Test Result"
-          command: "tar -cvf artifact.tar ./allure-report/"
+          command: |
+            mkdir test_artifact
+            tar -cvf ./test_artifact/artifact_1.tar ./allure-report
+            tar -cvf ./test_artifact/artifact_2.tar ./logs
           when: always
       - store_artifacts:
-          path: artifact.tar
+          path: test_artifact
 
 workflows:
   Test-Workflow:
