--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "wdio run ./wdio.conf.js",
     "test-safari": "wdio run ./wdio.conf.safari.js",
+    "test-ci": "wdio run ./wdio.conf.ci.js",
     "cloud": "wdio run ./wdio.conf.cloud.js",
     "report": "allure open"
   },
@@ -28,6 +29,7 @@
     "chromedriver": "^114.0.2",
     "edgedriver": "^5.2.1",
     "geckodriver": "^4.0.4",
+    "wdio-docker-service": "^3.2.1",
     "wdio-safaridriver-service": "^2.1.0"
   }
 }
