--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@ jobs:
       image: ubuntu-2204:current
     steps:
       - checkout
-      # - run:
-      #     name: "Running Selenium Standalone - Chrome"
-      #     command: docker run --name "chrome" -d -p 4444:4444 selenium/standalone-chrome:latest
-      #     when: always
+      - run:
+          name: "Running Selenium Standalone - Chrome"
+          command: docker run --name "chrome" -d -p 4444:4444 selenium/standalone-chrome:latest
+          when: always
       - run:
           name: "Install Dependencies"
           command: |
@@ -35,10 +35,10 @@ jobs:
       image: ubuntu-2204:current
     steps:
       - checkout    
-      # - run:
-      #     name: "Running Selenium Standalone - Firefox"
-      #     command: docker run --name "firefox" -d -p 4444:4444 selenium/standalone-firefox:latest
-      #     when: always
+      - run:
+          name: "Running Selenium Standalone - Firefox"
+          command: docker run --name "firefox" -d -p 4444:4444 selenium/standalone-firefox:latest
+          when: always
       - run:
           name: "Install Dependencies"
           command: |
@@ -65,10 +65,10 @@ jobs:
       image: ubuntu-2204:current
     steps:
       - checkout    
-      # - run:
-      #     name: "Running Selenium Standalone - Edge"
-      #     command: docker run --name "edge" -d -p 4444:4444 selenium/standalone-edge:latest
-      #     when: always
+      - run:
+          name: "Running Selenium Standalone - Edge"
+          command: docker run --name "edge" -d -p 4444:4444 selenium/standalone-edge:latest
+          when: always
       - run:
           name: "Install Dependencies"
           command: |
