--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,9 +99,61 @@ jobs:
       - store_artifacts:
           path: test_artifact
 
+  Notification-Start:
+    docker:
+      - image: cimg/node:18.16.0
+    steps:
+      - checkout
+      - run:
+          name: "Install Node Package"
+          command: npm install dotenv run-func @penseapp/discord-notification
+      - run:
+          name: "Setup Environment"
+          command: |
+            echo "BUILD=<< pipeline.number >>" >> .env
+            echo "REPOSITORY_URL=$CIRCLE_REPOSITORY_URL" >> .env
+            echo "BUILD_URL=$CIRCLE_BUILD_URL" >> .env
+            echo "BRANCH=$CIRCLE_BRANCH" >> .env
+            echo "DISCORD_WEBHOOK=$DISCORD_WEBHOOK" >> .env
+      - run:
+          name: "Send Notification - Start Testing"
+          command: npx run-func discord-notification.js test "start"
+  
+  Notification-Stop:
+    docker:
+      - image: cimg/node:18.16.0
+    steps:
+      - checkout
+      - run:
+          name: "Install Node Package"
+          command: npm install dotenv run-func @penseapp/discord-notification
+      - run:
+          name: "Setup Environment"
+          command: |
+            echo "BUILD=<< pipeline.number >>" >> .env
+            echo "REPOSITORY_URL=$CIRCLE_REPOSITORY_URL" >> .env
+            echo "BUILD_URL=$CIRCLE_BUILD_URL" >> .env
+            echo "BRANCH=$CIRCLE_BRANCH" >> .env
+            echo "DISCORD_WEBHOOK=$DISCORD_WEBHOOK" >> .env
+      - run:
+          name: "Send Notification - Stop Testing"
+          command: npx run-func discord-notification.js test "stop"
+
 workflows:
   Test-Workflow:
     jobs:
-      - Testing-Chrome
-      - Testing-Firefox
-      - Testing-Edge
+      - Notification-Start
+      - Testing-Chrome:
+          requires:
+            - Notification-Start
+      - Testing-Firefox:
+          requires:
+            - Notification-Start
+      - Testing-Edge:
+          requires:
+            - Notification-Start
+      - Notification-Stop:
+          requires:
+            - Testing-Chrome
+            - Testing-Firefox
+            - Testing-Edge
