--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test-safari": "wdio run ./resources/config/wdio.conf.safari.js",
     "test-ci": "wdio run ./resources/config/wdio.conf.ci.js",
     "test-sauce": "wdio run ./resources/config/wdio.conf.sauce.js",
+    "test-bdd": "wdio run ./resources/config/wdio.conf.cucumber.js",
+    "test-bdd-ci": "wdio run ./resources/config/wdio.conf.cucumber.ci.js",
     "report": "allure open"
   },
   "keywords": [],
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@wdio/allure-reporter": "^8.11.0",
+    "@wdio/cucumber-framework": "^8.13.13",
     "@wdio/local-runner": "^8.11.2",
     "@wdio/mocha-framework": "^8.11.0",
     "@wdio/selenium-standalone-service": "^8.11.0",
