--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,7 @@ jobs:
           when: always
       - store_artifacts:
           path: test_artifact
+      disabled: true
 
   Notification-Start:
     docker:
