--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "wdio run ./resources/config/wdio.conf.js",
     "test-safari": "wdio run ./resources/config/wdio.conf.safari.js",
     "test-ci": "wdio run ./resources/config/wdio.conf.ci.js",
-    "test-sauce": "wdio run ./resources/config/wdio.conf.sauce.js",
     "test-bdd": "wdio run ./resources/config/wdio.conf.cucumber.js",
     "test-bdd-ci": "wdio run ./resources/config/wdio.conf.cucumber.ci.js",
     "report": "allure open"
@@ -16,23 +15,20 @@
   "author": "lynix28",
   "license": "ISC",
   "dependencies": {
-    "@wdio/cli": "^8.11.2",
-    "@wdio/globals": "^8.11.2",
-    "chai": "^4.3.7",
-    "dotenv": "^16.1.4",
-    "ts-node": "^10.9.1"
-  },
-  "devDependencies": {
     "@wdio/allure-reporter": "^8.11.0",
-    "@wdio/cucumber-framework": "^8.13.13",
+    "@wdio/cli": "^8.11.2",
+    "@wdio/cucumber-framework": "^8.15.4",
+    "@wdio/globals": "^8.11.2",
     "@wdio/local-runner": "^8.11.2",
     "@wdio/mocha-framework": "^8.11.0",
     "@wdio/selenium-standalone-service": "^8.11.0",
     "allure-commandline": "^2.22.2",
-    "chromedriver": "^114.0.2",
-    "edgedriver": "^5.2.1",
-    "geckodriver": "^4.0.4",
-    "wdio-docker-service": "^3.2.1",
-    "wdio-safaridriver-service": "^2.1.0"
+    "chai": "^4.3.7",
+    "chromedriver": "^114.0.3",
+    "dotenv": "^16.1.4",
+    "edgedriver": "^5.3.5",
+    "geckodriver": "^4.2.0",
+    "ts-node": "^10.9.1",
+    "wdio-safaridriver-service": "^2.1.1"
   }
 }
